@@ -1,0 +1,81 @@
+[Tests]
+Id=Default
+StringValue=Now is the time
+StringValue=for all good men
+IntegerValue=1234
+IntegerValue=2345
+HexValue=0x04D2
+HexValue=0x0929
+DoubleValue=3.1415928
+DoubleValue=6.2831856
+BoolYesValue=Yes
+BoolYesValue=No
+BoolNoValue=No
+BoolNoValue=Yes
+BoolOnValue=On
+BoolOnValue=Off
+BoolOffValue=Off
+BoolOffValue=On
+BoolTrueValue=True
+BoolTrueValue=False
+BoolFalseValue=False
+BoolFalseValue=True
+BoolOneValue=1
+BoolOneValue=0
+BoolZeroValue=0
+BoolZeroValue=1
+TimeHHMMMorningValue=09:30
+TimeHHMMMorningValue=10:30
+TimeHHMMEveningValue=21:30
+TimeHHMMEveningValue=22:15
+TimeHHMMSSMorningValue=09:30:45
+TimeHHMMSSMorningValue=10:30:45
+TimeHHMMSSEveningValue=21:30:45
+TimeHHMMSSEveningValue=22:30:45
+IpAddressValidValue=1.2.3.4
+IpAddressValidValue=5.6.7.8
+IpAddressInvalidValue=256.2.3.4
+
+[Random]
+SomeRandomEntry=Foo
+
+[Tests]
+Id=Second
+StringValue=to come to the aid
+StringValue=of their country!
+IntegerValue=3456
+IntegerValue=4567
+HexValue=0x0D80
+HexValue=0x11D7
+DoubleValue=9.4247784
+DoubleValue=12.5663712
+BoolYesValue=Yes
+BoolYesValue=Yes
+BoolNoValue=No
+BoolNoValue=No
+BoolOnValue=On
+BoolOnValue=On
+BoolOffValue=Off
+BoolOffValue=Off
+BoolTrueValue=True
+BoolTrueValue=True
+BoolFalseValue=False
+BoolFalseValue=False
+BoolOneValue=1
+BoolOneValue=1
+BoolZeroValue=0
+BoolZeroValue=0
+TimeHHMMMorningValue=11:30
+TimeHHMMMorningValue=12:30
+TimeHHMMEveningValue=23:30
+TimeHHMMEveningValue=23:45
+TimeHHMMSSMorningValue=11:30:45
+TimeHHMMSSMorningValue=11:45:45
+TimeHHMMSSEveningValue=22:30:45
+TimeHHMMSSEveningValue=23:30:45
+IpAddressValidValue=6.7.8.9
+IpAddressValidValue=7.8.9.10
+IpAddressInvalidValue=256.256.3.4
+
+[Random]
+SomeOtherRandomEntry=Bar
